--- a/app.json
+++ b/app.json
@@ -2,21 +2,21 @@
   {
     "name": "Cheese Burger",
     "price": 150,
-    "image": "/public/images/burger1.jpg"
+    "image": "images/burger1.jpg"
   },
   {
     "name": "Double Cheese Burger",
     "price": 200,
-    "image": "/public/images/burger2.jpg"
+    "image": "images/burger2.jpg"
   },
   {
     "name": "Veggie Burger",
     "price": 120,
-    "image": "/public/images/burger3.jpg"
+    "image": "images/burger3.jpg"
   },
   {
     "name": "Chicken Burger",
     "price": 180,
-    "image": "/public/images/burger4.jpg"
+    "image": "images/burger4.jpg"
   }
 ]
